# ferris-eat-be

./: .env.example  Cargo.toml  Dockerfile  api_track.md  sea_orm_cli.md  sqlx-data.json
.github/workflows/: audit.yml  build.yml  checks.yml
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/entities/: ingredient.rs  ingredient_quantity.rs  ingredient_sort.rs  mod.rs  prelude.rs  recipe.rs  unit.rs  user.rs
entity/src/structs/: user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220603_220951_create_user_table.rs  m20220605_162820_create_recipe_table.rs  m20220605_192602_create_unit_table.rs  m20220605_192716_create_ingredient_table.rs  m20220610_001100_create_ingredient_quantity_table.rs  m20220610_110331_create_ingredient_sort_table.rs
migrations/: 20220611133115_create_user_table.up.sql  20220611204039_create_recipe_table.up.sql  20220611205436_create_unit_table.up.sql  20220611205523_create_ingredient_table.up.sql  20220611205726_create_ingredient_quantity_table.down.sql  20220611205726_create_ingredient_quantity_table.up.sql  20220611205726_create_recipe_quantity_table.down.sql  20220611205726_create_recipe_quantity_table.up.sql  20220611205856_create_ingredient_sort_table.down.sql  20220611205856_create_ingredient_sort_table.up.sql  20220611210059_add_unit_data.up.sql  20220616230719_create_shopping_table.down.sql  20220616230719_create_shopping_table.up.sql  20220616231147_create_ingredient_shopping_table.down.sql  20220616231147_create_ingredient_shopping_table.up.sql  20220616231147_create_shopping_ingredient_table.down.sql  20220616231147_create_shopping_ingredient_table.up.sql  20220616233825_create_shopping_quantity_table.down.sql  20220616233825_create_shopping_quantity_table.up.sql  20220617152000_create_updated_at_trigger.down.sql  20220617152000_create_updated_at_trigger.up.sql
src/: api.rs  app.rs  main.rs  routes.rs
src/api/: auth.rs  global.rs  ingredients.rs  recipes.rs  shopping.rs  units.rs  users.rs
src/api/ingredients/: api.rs  service.rs
src/api/recipes/: api.rs  service.rs
src/api/shopping/: api.rs  ingredient.rs  quantity.rs  recipe.rs  service.rs
src/api/units/: api.rs
src/api/users/: api.rs  auth.rs  service.rs
src/structs/: recipe.rs  user.rs
