[package]
name = "ferris-eat"
version = "0.1.0"
authors = ["GiyoMoon <giyomoon@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies.entity]
path = "entity"

[dependencies.migration]
path = "migration"

[dependencies.sea-orm]
version = "0.8.0"
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]

[dependencies.dotenv]
version = "0.15.0"

[dependencies.tokio]
version = "1.19.1"
features = ["macros", "rt-multi-thread"]

[dependencies.axum]
version = "0.5.6"

[dependencies.axum-macros]
version = "0.2.2"

[dependencies.validator]
version = "0.15.0"

# [dependencies.chrono]
# version = "0.4.19"
