[package]
name = "ferris-eat"
version = "0.1.0"
authors = ["GiyoMoon <giyomoon@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.axum]
version = "^0"
features = ["headers"]

[dependencies.axum-macros]
version = "^0"

[dependencies.base64]
version = "^0"

[dependencies.bcrypt]
version = "^0"

[dependencies.dotenv]
version = "^0"

[dependencies.fancy-regex]
version = "^0"

[dependencies.jsonwebtoken]
default-features = false
version = "^8"

[dependencies.once_cell]
version = "^1"

[dependencies.serde]
version = "^1"
features = ["derive"]

[dependencies.serde_json]
version = "^1"

[dependencies.sqlx]
version = "0.5.13"
features = [ "runtime-tokio-rustls", "postgres", "uuid", "time", "offline" ]

[dependencies.time]
version = "^0.2"

[dependencies.tokio]
version = "^1"
features = ["macros", "rt-multi-thread"]

[dependencies.uuid]
version = "^0"
features = [ "v4", "serde" ]

[dependencies.validator]
version = "^0"
features = ["derive"]
