[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies.sea-orm]
version = "^0.8.0"

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.validator]
version = "0.15.0"
features = ["derive"]

[dependencies.bcrypt]
version = "0.13.0"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.regex]
version = "1.5.6"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]
