[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies.sea-orm]
default-features = false
version = "^0"

[dependencies.serde]
version = "^1"
features = ["derive"]

[dependencies.validator]
version = "^0"
features = ["derive"]

[dependencies.bcrypt]
version = "^0"

[dependencies.once_cell]
version = "^1"

[dependencies.regex]
version = "^1"

[dependencies.chrono]
version = "^0"
features = ["serde"]
